--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -16,15 +16,15 @@
 <a-scene
   renderer="colorManagement: true;"
   info-message="htmlSrc: #messageText"
-  model-viewer="gltfModel: #triceratops; title: Triceratops">
+  model-viewer="gltfModel: #FrameTest; title: Frametest">
   <a-assets timeout="10000">
     <!--
       Model source: https://sketchfab.com/3d-models/triceratops-d16aabe33dc24f8ab37e3df50c068265
       Model author: https://sketchfab.com/VapTor
       Model license: Sketcfab Standard
     -->
-    <a-asset-item id="triceratops"
-      src="https://cdn.aframe.io/examples/ar/models/triceratops/scene.gltf"
+    <a-asset-item id="Frames"
+      src="https://beardbox.github.io/WebXRTest/media/gltf/frames/Sampleframes.gltf"
       response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
 
     <img id="shadow" src="shadow.png"></img>
