--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -18,6 +18,11 @@
   info-message="htmlSrc: #messageText"
   model-viewer="gltfModel: #FrameTest; title: Frametest">
   <a-assets timeout="10000">
+    <!--
+      Model source: https://beardbox.github.io/WebXRTest/media/gltf/frames/SampleFrames.gltf
+      Model author: https://beardbox.github.io/WebXRTest/media/gltf/frames/SampleFrames.gltf
+      Model license: BeardySauce
+    -->
     <a-asset-item id="Frames"
       src="https://beardbox.github.io/WebXRTest/media/gltf/frames/SampleFrames.gltf"
       response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
