--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -24,7 +24,7 @@
       Model license: BeardySauce
     -->
     <a-asset-item id="Frames"
-      src="https://beardbox.github.io/aframetest/examples/showcase/model-viewer/frames/SampleFrames.gltf"
+      src="SampleFrames.gltf"
       response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
 
     <img id="shadow" src="shadow.png"></img>
