--- a/examples/showcase/model-viewer/index.html
+++ b/examples/showcase/model-viewer/index.html
@@ -24,7 +24,7 @@
       Model license: BeardySauce
     -->
     <a-asset-item id="Frames"
-      src="../../../frames/SampleFrames.gltf"
+      src="../../frames/SampleFrames.gltf"
       response-type="arraybuffer" crossorigin="anonymous"></a-asset-item>
 
     <img id="shadow" src="shadow.png"></img>
